# IB_nawigacja

./: CMakeLists.txt  Readme.md
ModelOffset/: CMakeLists.txt  ModelOffset.py
ModelOffset/Resources/UI/: ModelOffset.ui
TableRegistration/: .gitignore  CMakeLists.txt  Readme.md  TableRegistration.py
TableRegistration/Resources/UI/: TableRegistration.ui
slicer-scene-20220315/: 2022-03-07-Scene-update_BP.mrml  l_ureter_points.mrk.json  r_ureter_points.mrk.json
